--- a/src/web/css/direct/editProject.css
+++ b/src/web/css/direct/editProject.css
@@ -1383,7 +1383,7 @@ div#dp-popup {
 
 .metaAreaLeft {
     float: left;
-    width: 41%;
+    width: 45%;
 }
 
 .metaAreaRight {
